sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: '<-' expected but ')' found.
		for(fin to debut by -1){
                                      ^AlgCocktailSort2:22: error: illegal start of simple expression
	}while(swap)
        ^